Исправлены замечания наставника

--- a/src/pages/hamburger-menu.pug
+++ b/src/pages/hamburger-menu.pug
@@ -8,22 +8,22 @@
     </a>
     <ul class="mobile-menu__list">
       <li class="mobile-menu__elem">
-        <a href="#" class="mobile-menu__link">Главная</a>
+        <a href="#" tabindex="-1" class="mobile-menu__link">Главная</a>
       </li>
       <li class="mobile-menu__elem">
-        <a href="#" class="mobile-menu__link">Обо мне</a>
+        <a href="#" tabindex="-1" class="mobile-menu__link">Обо мне</a>
       </li>
       <li class="mobile-menu__elem">
-        <a href="#" class="mobile-menu__link">Навыки</a>
+        <a href="#" tabindex="-1" class="mobile-menu__link">Навыки</a>
       </li>
       <li class="mobile-menu__elem">
-        <a href="#" class="mobile-menu__link">Работы</a>
+        <a href="#" tabindex="-1" class="mobile-menu__link">Работы</a>
       </li>
       <li class="mobile-menu__elem">
-        <a href="#" class="mobile-menu__link">Отзывы</a>
+        <a href="#" tabindex="-1" class="mobile-menu__link">Отзывы</a>
       </li>
       <li class="mobile-menu__elem">
-        <a href="#" class="mobile-menu__link">Связаться</a>
+        <a href="#" tabindex="-1" class="mobile-menu__link">Связаться</a>
       </li>
     </ul>
   </div>
