--- a/src/pages/parallax-welcome.pug
+++ b/src/pages/parallax-welcome.pug
@@ -7,7 +7,7 @@
         +image("content/train.png", "parallax__image", "", "presentation")
     .parallax-welcome__element.parallax-welcome__element--grass.js-parallax-layers(data-speed="0.38")
         +image("content/grass.png", "parallax__image", "", "presentation")
-    .parallax-welcome__element.parallax-welcome__element--shadow.js-parallax-layers(data-speed="0.45")
+    .parallax-welcome__element.parallax-welcome__element--shadow
         +image("content/shadow.png", "parallax__image", "", "presentation")
-    .parallax-welcome__element.parallax-welcome__element--black.js-parallax-layers(data-speed="0.45")
+    .parallax-welcome__element.parallax-welcome__element--black
         +image("content/black.png", "parallax__image", "", "presentation")
