--- a/src/styles/blocks/hamburger-menu.pcss
+++ b/src/styles/blocks/hamburger-menu.pcss
@@ -27,7 +27,7 @@
     text-align: center;
     justify-content: center;
     padding-top: 4rem;
-    background-color: rgba(#2f3234, 0.99);
+    background-color: rgba($background, 0.99);
     opacity: 0;
     transition: opacity 0.3s;
     align-items: center;
@@ -36,7 +36,7 @@
 
 .hamburgermenu.--active .mobilemenu {
     top: 0vh;
-    opacity: 0.8;
+    opacity: 1;
     display: flex;
     position: fixed;
     bottom: 0;
@@ -47,7 +47,7 @@
     text-align: center;
     justify-content: center;
     padding-top: 4rem;
-    background-color: rgba(#2f3234, 0.99);
+    background-color: rgba($background, 0.99);
 }
 
 .mobile-menu__elem {
