--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -13,7 +13,7 @@
 }
 
 .header__logo {
-    color: #ffffff;
+    color: $white;
     font-family: "Open Sans", sans-serif;
     font-size: 36px;
     font-weight: 800;
@@ -23,7 +23,7 @@
 .header__menu {
     display: flex;
     max-width: 497px;
-    color: #ffffff;
+    color: $white;
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
     font-weight: 400;
