--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -5,15 +5,17 @@
 }
 
 .menu__link {
-    color: #ffffff;
+    color: $white;
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
+    border-bottom: 1px solid transparent;
+    transition: $transition;
     text-decoration: none;
     &:hover,
     &:active {
-        color: #ff9a00;
-        text-decoration: underline;
+        color: $active;
+        border-bottom-color: $active;
     }
 }
