--- a/src/styles/blocks/parallax-welcome.pcss
+++ b/src/styles/blocks/parallax-welcome.pcss
@@ -3,7 +3,7 @@
     overflow: hidden;
     height: 1078px;
     width: 100%;
-    background-color: #1c2023;
+    background-color: $background;
 }
 
 .parallax__image {
