--- a/src/styles/blocks/skill-vue.pcss
+++ b/src/styles/blocks/skill-vue.pcss
@@ -26,7 +26,7 @@
   
 .skill__circle-text {
     opacity: 0.5;
-    color: #ffffff;
+    color: $white;
     font-family: "Open Sans", sans-serif;
     font-size: 18px;
     font-weight: 700;
