--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -2,9 +2,10 @@
     width: 25px;
     height: 25px;
     opacity: 0.4;
-    fill: #ffffff;
+    fill: $white;
+    transition: $transition;
     &:hover {
-        fill: #ff9a00;
+        fill: $active;
         opacity: 1;
     }
 }
