--- a/src/styles/blocks/welcome-section.pcss
+++ b/src/styles/blocks/welcome-section.pcss
@@ -1,6 +1,6 @@
 .welcome-section {
     position: relative;
-    background-color: #1c2023;
+    background-color: $background;
     height: 1451px;
     width: 100%;
 
