--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: $white;
     min-height: 394px;
     z-index: 1;
     padding-top: 80px;
