--- a/src/styles/blocks/developer.pcss
+++ b/src/styles/blocks/developer.pcss
@@ -50,7 +50,7 @@
 
 .developer__desc {
     opacity: 0.4;
-    color: #ffffff;
+    color: $white;
     font-family: "Open Sans", sans-serif;
     font-size: 18px;
     font-weight: 500;
@@ -83,7 +83,7 @@
 }
 
 .developer__name {
-    color: #ffffff;
+    color: $white;
     font-family: "Open Sans", sans-serif;
     font-size: 72px;
     font-weight: 700;
