--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -18,7 +18,7 @@
 }
 
 .footer {
-    background: #222427;
+    background: $background-footer;
 }
 
 .footer__username,
@@ -150,7 +150,7 @@
 .socials__item--footer {
     width: 50px;
     height: 50px;
-    border: 1px solid #fff;
+    border: 1px solid $white;
     border-radius: 50%;
     margin-right: 25px;
     position: relative;
@@ -158,9 +158,9 @@
         margin-right: 0;
     }
     &:hover {
-        border-color: #ff9a00;
+        border-color: $active;
         .socials__icon--footer {
-            fill: #ff9a00;
+            fill: $active;
             opacity: 1;
         }
     }
@@ -173,7 +173,7 @@
     transform: translate(-50%, -50%);
     width: 20px;
     height: 20px;
-    fill: #fff;
+    fill: $white;
     opacity: 0.5;
 }
 
