--- a/src/styles/blocks/information.pcss
+++ b/src/styles/blocks/information.pcss
@@ -41,14 +41,14 @@
 .slider-button__btn--information {
     width: 50px;
     height: 50px;
-    border: 1px solid #fff;
+    border: 1px solid $white;
     border-radius: 50%;
     background-color: transparent;
     margin-right: 30px;
     outline: none;
     cursor: pointer;
     &:hover {
-        fill: #ff9a00;
+        fill: $active;
     }
 }
 
@@ -77,7 +77,7 @@
 
 .btn__information {
     width: 10px;
-    fill: #fff;
+    fill: $white;
 }
 
 .information__list {
@@ -119,7 +119,7 @@
     position: absolute;
     width: 75px;
     height: 63px;
-    fill: #ffffff;
+    fill: $white;
     opacity: 0.05;
 
     left: -25%; 
