--- a/src/styles/blocks/mywork.pcss
+++ b/src/styles/blocks/mywork.pcss
@@ -1,6 +1,6 @@
 .mywork {
-    background-color: #fff;
-    color: #333c49;
+    background-color: $white;
+    color: $grey;
     font-family: "Open Sans", sans-serif;
     min-height: 650px;
 }
@@ -49,7 +49,7 @@
 
 .slider__number {
     position: absolute;
-    color: #e6e6e6;
+    color: $light-grey;
     font-family: "Open Sans", sans-serif;
     font-size: 400px;
     font-weight: 800;
@@ -122,12 +122,12 @@
     padding: 0 22px;
     border-radius: 30px;
     opacity: 0.7;
-    color: #2f3642;
+    color: $text-tag;
     font-family: "Open Sans", sans-serif;
     font-size: 15px;
     font-weight: 700;
     line-height: 48px;
-    background-color: #f3f5f9;
+    background-color: $tag;
 
     @include desktop {
         font-size: 15px;
@@ -156,7 +156,7 @@
 
 .slider__text {
     opacity: 0.7;
-    color: #333c49;
+    color: $grey;
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
     font-weight: 700;
@@ -175,15 +175,16 @@
 }
 
 .slider__site {
-    color: #586ed3;
+    color: $blue;
     font-family: "Open Sans", sans-serif;
     font-size: 18px;
     font-weight: 700;
     line-height: 48px;
     position: relative;
     padding-left: 30px;
+    transition: $transition;
     &:hover {
-        color: #ff9a00;
+        color: $active;
     }
 
     &::before {
