--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -1,7 +1,6 @@
 .slider {
     display: flex;
     position: relative;
-    //width: 60%;
     z-index: 1;
 
     @include desktop {
@@ -42,16 +41,11 @@
 
 .slider-miniature {
     position: absolute;
-    right: -18%;
     bottom: 20%;
-    height: 118px;
-    width: 945px;
     overflow: hidden;
     
     @include desktop {
-        right: -54%;
         bottom: 22%;
-        width: 993px;
     }
 
     @include phonesmax {
@@ -88,11 +82,12 @@
         bottom: 0;
         left: 0;
         background-color: transparent;
-        transition: background-color 0.4s;
+        transition: background-color $transition;
     }
 
     &:hover::before {
-        background-color: rgba(#ff9a00, 0.3);
+        background-color: rgba($active, 0.3);
+        transition: $transition;
     }
 
     &.active::after {
@@ -103,9 +98,9 @@
         bottom: 0;
         left: 0;
         right: 0;
-        border: 3px solid #ff9a00;
+        border: 3px solid $active;
         z-index: 2;
-        background-color: rgba(#ff9a00, 0.3);
+        background-color: rgba($active, 0.3);
     }
 }
 
@@ -115,11 +110,12 @@
     bottom: 0;
     width: 50px;
     height: 50px;
-    background-color: #414c63;
-    transition: background-color 0.4s;
+    background-color: $text-color;
+    transition: background-color $transition;
 
     &:not([disabled]):hover {
-        background-color: #ff9a00;
+        background-color: $active;
+        transition: $transition;
     }
 
     &:disabled {
@@ -143,7 +139,7 @@
 .slider__btn-icon {
     width: 10px;
     height: 10px;
-    fill: #fff;
+    fill: $white;
     transform: rotate(-90deg);
 
     &--next {
